src/tests/select/snapshots/ciboulette2pg__tests__select__related_include_and_sparse_select_query.snap
---
source: src/tests/select/mod.rs
expression: "sqlformat::format(query.as_str(), &sqlformat::QueryParams::None,\n                  sqlformat::FormatOptions::default())"

---
WITH "cte_articles_data_0" AS (
  SELECT
    "public"."articles"."id" :: TEXT AS "id",
    "public"."articles"."id" AS "main_id",
    NULL :: TEXT AS "related_id",
    NULL :: TEXT AS "related_type",
    $1 :: TEXT AS "type",
    JSON_BUILD_OBJECT(
      $2,
      "public"."articles"."body",
      $3,
      "public"."articles"."title"
    ) AS "data"
  FROM
    "public"."articles"
    INNER JOIN "public"."people-article" ON "public"."people-article"."article_id" = "public"."articles"."id"
    INNER JOIN "public"."peoples" ON "public"."peoples"."id" = "public"."people-article"."people_id"
  WHERE
    "public"."peoples"."id" = $4
),
"cte_rel_peoples_data_1" AS (
  SELECT
    "public"."peoples"."id" :: TEXT AS "id",
    "public"."peoples"."id" AS "main_id",
    "cte_articles_data_0"."id" :: TEXT AS "related_id",
    $5 :: TEXT AS "related_type",
    $6 :: TEXT AS "type",
    JSON_BUILD_OBJECT($7, "public"."peoples"."first-name") AS "data",
    "public"."peoples"."favorite_color" AS "rel_favorite_color"
  FROM
    "public"."peoples"
    INNER JOIN "public"."people-article" ON "public"."people-article"."people_id" = "public"."peoples"."id"
    INNER JOIN "cte_articles_data_0" ON "cte_articles_data_0"."main_id" = "public"."people-article"."article_id"
) (
  SELECT
    "cte_articles_data_0"."id",
    "cte_articles_data_0"."type",
    "cte_articles_data_0"."data",
    "cte_articles_data_0"."related_type",
    "cte_articles_data_0"."related_id"
  FROM
    "cte_articles_data_0"
)
UNION
ALL (
  SELECT
    "cte_rel_peoples_data_1"."id",
    "cte_rel_peoples_data_1"."type",
    "cte_rel_peoples_data_1"."data",
    "cte_rel_peoples_data_1"."related_type",
    "cte_rel_peoples_data_1"."related_id"
  FROM
    "cte_rel_peoples_data_1"
);
