src/tests/select/snapshots/ciboulette2pg__tests__select__select_many_to_many_relationships_select_query.snap
---
source: src/tests/select/mod.rs
expression: "sqlformat::format(query.as_str(), &sqlformat::QueryParams::None,\n                  sqlformat::FormatOptions::default())"

---
WITH "cte_articles_data_0" AS (
  SELECT
    "public"."articles"."id" :: TEXT AS "id",
    "public"."articles"."id" AS "main_id",
    "public"."peoples"."id" :: TEXT AS "related_id",
    $1 :: TEXT AS "related_type",
    $2 :: TEXT AS "type",
    NULL :: json AS "data"
  FROM
    "public"."articles"
    INNER JOIN "public"."people-article" ON "public"."people-article"."article_id" = "public"."articles"."id"
    INNER JOIN "public"."peoples" ON "public"."peoples"."id" = "public"."people-article"."people_id"
  WHERE
    "public"."peoples"."id" = $3
),
"cte_rel_peoples_data_1" AS (
  SELECT
    "public"."peoples"."id" :: TEXT AS "id",
    "public"."peoples"."id" AS "main_id",
    NULL :: TEXT AS "related_id",
    NULL :: TEXT AS "related_type",
    $4 :: TEXT AS "type",
    NULL :: json AS "data",
    "public"."peoples"."favorite_color" AS "rel_favorite_color"
  FROM
    "public"."peoples"
  WHERE
    "public"."peoples"."id" = $5
) (
  SELECT
    "cte_articles_data_0"."id",
    "cte_articles_data_0"."type",
    "cte_articles_data_0"."data",
    "cte_articles_data_0"."related_type",
    "cte_articles_data_0"."related_id"
  FROM
    "cte_articles_data_0"
);
