src/tests/select/snapshots/ciboulette2pg__tests__select__select_one_to_many_rels_select_query.snap
---
source: src/tests/select/mod.rs
expression: "sqlformat::format(query.as_str(), &sqlformat::QueryParams::None,\n                  sqlformat::FormatOptions::default())"

---
WITH "cte_comments_data_0" AS (
  SELECT
    "public"."comments"."id" :: TEXT AS "id",
    "public"."comments"."id" AS "main_id",
    NULL :: TEXT AS "related_id",
    NULL :: TEXT AS "related_type",
    $1 :: TEXT AS "type",
    JSON_BUILD_OBJECT($2, "public"."comments"."body") AS "data",
    "public"."comments"."article" AS "rel_article",
    "public"."comments"."author" AS "rel_author"
  FROM
    "public"."comments"
    INNER JOIN "public"."peoples" ON "public"."peoples"."id" = "public"."comments"."author"
  WHERE
    "public"."peoples"."id" = $3
)(
  SELECT
    "cte_comments_data_0"."id",
    "cte_comments_data_0"."type",
    "cte_comments_data_0"."data",
    "cte_comments_data_0"."related_type",
    "cte_comments_data_0"."related_id"
  FROM
    "cte_comments_data_0"
);
